k8s/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: ciadproject
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
