k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ciadproject-ingress
  namespace: ciadproject
  annotations:
    nginx.ingress.kubernetes.io/proxy-pass-headers: "Set-Cookie"
    nginx.ingress.kubernetes.io/proxy-cookie-path: "/ /"
spec:
  ingressClassName: nginx
  rules:
    - host: ciadproject.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
